--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="@string/wpiszlogin" />
+        android:hint="@string/name" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
