--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,21 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/glowny_pomarancz"
     tools:context=".Register">
 
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="241dp"
+        app:srcCompat="@drawable/ic_piwo_wide" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/name" />
+        android:hint="@string/name"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress" />
@@ -28,6 +37,7 @@
         android:id="@+id/editTextPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:ems="10"
         android:hint="@string/telefon"
         android:inputType="phone" />
@@ -36,6 +46,7 @@
         android:id="@+id/editTextDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:ems="10"
         android:hint="@string/dataurodzenia"
         android:inputType="date" />
@@ -44,6 +55,7 @@
         android:id="@+id/editTextTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:ems="10"
         android:hint="@string/wpiszhaslo"
         android:inputType="textPassword" />
@@ -52,6 +64,7 @@
         android:id="@+id/editTextTextPasswordCheck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:ems="10"
         android:hint="@string/powtorzhaslo"
         android:inputType="textPassword" />
@@ -61,5 +74,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="sendRegistration"
+        android:layout_marginHorizontal="20dp"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
         android:text="@string/zarejestrujsie" />
 </LinearLayout>
