--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_settings" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.epiwo.front.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_logout"
+        android:name="com.epiwo.front.ui.logoutdestroy.LogoutDestroy"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_logout_destroy" />
 </navigation>
