--- a/app/src/main/res/layout/fragment_logout_destroy.xml
+++ b/app/src/main/res/layout/fragment_logout_destroy.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/glowny_pomarancz"
     tools:context=".ui.logoutdestroy.LogoutDestroy">
 
     <Button
@@ -13,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="268dp"
         android:textColor="@color/black"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/glowny_pomarancz"
         android:text="@string/menu_logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -26,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="216dp"
         android:textColor="@color/black"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/glowny_pomarancz"
         android:text="@string/destroy_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
