--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/calendar"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/nav_chat"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Chat" />
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/gear"
             android:title="@string/menu_settings" />
