--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,6 +12,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/nav_chat"
+        android:name="com.epiwo.front.ui.chat.ChatFragment"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_chat" />
+
+    <fragment
         android:id="@+id/nav_settings"
         android:name="com.epiwo.front.ui.settings.SettingsFragment"
         android:label="@string/menu_settings"
