--- a/app/src/main/res/layout/add_meeting_activity.xml
+++ b/app/src/main/res/layout/add_meeting_activity.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/date_hint"
-        android:inputType="textPersonName" />
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/editTextMeetingPlace"
