stworzony fragment szukania spotkań

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -50,11 +50,10 @@
 
             <EditText
                 android:id="@+id/editPassword"
+                android:inputType="textPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:ems="10" />
         </TableRow>
 
         <TableRow
@@ -72,8 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:inputType="textPassword"/>
         </TableRow>
 
 
