dodany fragment na moderacje, zmieniony czat i data rejestracji.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,5 +34,10 @@
         android:name="com.epiwo.front.ui.home.SearchFragment"
         android:label="Search"
         tools:layout="@layout/fragment_search" />
+    <fragment
+        android:id="@id/nav_mod"
+        android:name="com.epiwo.front.ui.moderator.ModeratorFragment"
+        android:label="@string/my_meetings"
+        tools:layout="@layout/fragment_moderator"/>
 
 </navigation>
