--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,14 +41,14 @@
         android:hint="@string/telefon"
         android:inputType="phone" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:ems="10"
-        android:hint="@string/dataurodzenia"
-        android:inputType="phone" />
+        android:textSize="18dp"
+        android:hint="@string/dataurodzenia" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
