--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/calendar"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/nav_mod"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/my_meetings"/>
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/gear"
             android:title="@string/menu_settings" />
@@ -16,5 +20,6 @@
             android:id="@+id/nav_logout"
             android:icon="@drawable/sign_out"
             android:title="@string/menu_logout" />
+
     </group>
 </menu>
