--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -39,5 +39,11 @@
         android:name="com.epiwo.front.ui.moderator.ModeratorFragment"
         android:label="@string/my_meetings"
         tools:layout="@layout/fragment_moderator"/>
+    <fragment
+        android:id="@+id/nav_meeting_card"
+        android:name="com.epiwo.front.ui.moderator.MeetingCardFragment"
+        android:label="Meeting Card"
+        tools:layout="@layout/fragment_meeting_card"/>
+
 
 </navigation>
