--- a/app/src/main/res/layout/fragment_meeting_card.xml
+++ b/app/src/main/res/layout/fragment_meeting_card.xml
@@ -13,6 +13,7 @@
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
