--- a/app/src/main/res/layout/fragment_meeting_card.xml
+++ b/app/src/main/res/layout/fragment_meeting_card.xml
@@ -114,29 +114,31 @@
         android:id="@+id/button_go_to_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="48dp"
         android:text="@string/chat_meeting"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_edit_meeting" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_edit_meeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="48dp"
         android:text="@string/modify_meeting"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_leave_meeting" />
+        app:layout_constraintEnd_toStartOf="@+id/button_leave_meeting"
+        app:layout_constraintStart_toEndOf="@+id/button_go_to_chat" />
 
     <Button
         android:id="@+id/button_leave_meeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="48dp"
         android:text="@string/leave_meeting"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -144,11 +146,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/participant_list"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_edit_meeting"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_go_to_chat"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12">
 
