--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,7 @@
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_mod"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/crown_simple"
             android:title="@string/my_meetings"/>
         <item
             android:id="@+id/nav_settings"
