--- a/app/src/main/res/layout/fragment_meeting_card.xml
+++ b/app/src/main/res/layout/fragment_meeting_card.xml
@@ -52,52 +52,61 @@
 
     <EditText
         android:id="@+id/editTextMeetingCardName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
         android:ems="10"
+        android:focusable="false"
         android:inputType="text"
         android:text="Name"
-        android:focusable="false"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextMeetingCardPlace"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="Name"
-        android:focusable="false"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextMeetingCardDesc" />
 
     <EditText
         android:id="@+id/editTextMeetingCardDate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="Name"
-        android:focusable="false"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextMeetingCardPlace" />
 
     <EditText
         android:id="@+id/editTextMeetingCardDesc"
-        android:layout_width="328dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         android:text="Name"
-        android:focusable="false"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextMeetingCardName" />
 
@@ -105,10 +114,9 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="@string/meeting_date_hint_users"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMeetingDateHint" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextMeetingCardDate" />
 
     <Button
         android:id="@+id/button_go_to_chat"
