--- a/app/src/main/res/layout/fragment_logout.xml
+++ b/app/src/main/res/layout/fragment_logout.xml
@@ -7,5 +7,13 @@
     tools:context=".ui.logoutdestroy.LogoutFragment">
 
 
-
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/you_are_logged_out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
