--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -38,46 +38,11 @@
                 android:text="Name" />
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/wpiszhaslo" />
-
-            <EditText
-                android:id="@+id/editPassword"
-                android:inputType="textPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textPasswordRepeat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/powtorzhaslo" />
-
-            <EditText
-                android:id="@+id/editPasswordRepeat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword"/>
-        </TableRow>
 
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textName"
@@ -120,16 +85,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="50dp"
-        android:backgroundTint="@color/glowny_pomarancz"
         android:text="@string/update"
         android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/button_goto_change_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:text="@string/change_password_title" />
 
     <Button
         android:id="@+id/button_destroy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:backgroundTint="@color/glowny_pomarancz"
         android:text="@string/destroy_user"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
