--- a/app/src/main/res/layout/add_meeting_activity.xml
+++ b/app/src/main/res/layout/add_meeting_activity.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="createMeeting"
+        android:backgroundTint="@color/glowny_pomarancz"
         android:text="@string/create_meeting" />
 
     <EditText
